--- a/mae281a_lec06.tex
+++ b/mae281a_lec06.tex
@@ -1,5 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \mainmatter%
 \setcounter{page}{1}
 
@@ -19,13 +17,16 @@
 \lecture{Course Introduction}
 
 \section{Sensitivity Equations}
-This corresponds to Chapter 3.3 of Khalil. We now want to look at systems where
+This corresponds to Chapter 3.3 of Khalil.
+We now want to look at systems where
 $$\dot{x} = f(t,x,\lambda)$$
-By sensitivity we mean the derivative. We are interested in how uncertainties or changes in a system's properties (such as mass, length, etc.) will affect the system behavior.
+By sensitivity we mean the derivative.
+We are interested in how uncertainties or changes in a system's properties (such as mass, length, etc.) will affect the system behavior.
 
 We want
 $$x_\lambda = \frac{\partial x}{\partial\lambda}$$
-Consider the nominal case where $\lambda=\lambda_0$ and the nominal system $\dot{x}=f(t,x,\lambda_0)$. Assuming that there exists a unique solution over the range $[t_0,t_1]$ this leads to
+Consider the nominal case where $\lambda=\lambda_0$ and the nominal system $\dot{x}=f(t,x,\lambda_0)$.
+Assuming that there exists a unique solution over the range $[t_0,t_1]$ this leads to
 \begin{align*}
 x(t,\lambda) &= x_0 + \int_{t_0}^t f(x,x(s,\lambda),\lambda)ds \\
 x_\lambda(t,\lambda) &= \int_{t_0}^t \left[ \frac{\partial f}{\partial x}(s,x(s,\lambda),\lambda)x_\lambda(s,\lambda) + \frac{\partial f}{\partial\lambda}(s,x(s,\lambda),\lambda) \right]ds
@@ -42,14 +43,17 @@ $$A(t,\lambda) = \left.\frac{\partial f(t,x,\lambda)}{\partial x}\right|_{x=x(t,
 The \textit{sensitivity equation} is denoted by $S(t) = x_\lambda(t,\lambda)$ and is the unique solution of the equation
 $$\dot{S}(t) = A(t,\lambda_0)S(t) + B(t,\lambda_0), \qquad S(t_0) = 0$$
 
-We need a solution of $\dot{x}=f(t,x,\lambda_0)$ to compute $S(t)$ with $S(t_0)=0$. To get there we take a Taylor's series expansion about $\lambda_0$ and find
+We need a solution of $\dot{x}=f(t,x,\lambda_0)$ to compute $S(t)$ with $S(t_0)=0$.
+To get there we take a Taylor's series expansion about $\lambda_0$ and find
 $$x(t,\lambda) \approx x(t,\lambda_0) + S(t)(\lambda-\lambda_0)$$
 This is only a valid approximation over a small range of $\lambda-\lambda_0$.
 
 \section{Comparision Principle}
-This corresponds to Chapter 3.4 of Khalil. We are looking at differential inequalities such that
+This corresponds to Chapter 3.4 of Khalil.
+We are looking at differential inequalities such that
 $$\dot{v}\leq f(t,v)$$
-where $v$ is a scalar and $f$ is scalar-valued (not a vector field). Now consider the differential equation
+where $v$ is a scalar and $f$ is scalar-valued (not a vector field).
+Now consider the differential equation
 $$\dot{u} = f(t,u)$$
 using the same function $f$ and recall Gr\"onwalls Lemma in \S\ref{sec:04gronwall} which showed that
 $$y(t) \leq \lambda(t) + \int_a^t\mu(s)y(s)ds$$
@@ -86,4 +90,3 @@ Then we get
 This shows that the energy of the system decays to within the unit circle.
 $\lozenge$
 \end{example}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
