--- a/mae281a_lec09.tex
+++ b/mae281a_lec09.tex
@@ -1,5 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \mainmatter%
 \setcounter{page}{1}
 
@@ -115,6 +113,4 @@ $\lozenge$
 \includegraphics[width=.5\textwidth]{images/09separatrix}
 \caption{Pendulum.}
 \label{fig:09separatrix}
-\end{figure}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\end{figure}% chktex 16
