--- a/mae281a_lec02.tex
+++ b/mae281a_lec02.tex
@@ -1,5 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \mainmatter%
 \setcounter{page}{1}
 
@@ -18,7 +16,8 @@
 \label{lec:mae281a_lec02}
 
 \section{Limit Cycles Recap}
-Last lecture we studied linear and nonlinear limit cycles. An example of a linear limit cycle is a  harmonic oscillator given by
+Last lecture we studied linear and nonlinear limit cycles.
+An example of a linear limit cycle is a  harmonic oscillator given by
 $$\ddot{x} + x = 0$$
 and the state space is shown in Figure~\ref{fig:02secondorder}.
 
@@ -31,7 +30,8 @@ and the state space is shown in Figure~\ref{fig:02secondorder}.
 
 An example of a nonlinear limit cycle is a Van der Pol oscillator given by
 $$\ddot{x} + (x^2-1)\ddot{x} + x = 0$$
-and the state space is shown in Figure~\ref{fig:02vdplc}. Note that there is positive damping for $|x|>1$ and negative damping for $|x|<1$.
+and the state space is shown in Figure~\ref{fig:02vdplc}.
+Note that there is positive damping for $|x|>1$ and negative damping for $|x|<1$.
 
 \begin{figure}[ht!]
 \centering
@@ -43,7 +43,8 @@ and the state space is shown in Figure~\ref{fig:02vdplc}. Note that there is pos
 The harmonic oscillator has a period of $2\pi$ and the Van der Pol oscillator has a base harmonic accompanied by lower frequencies and can be modeled using a Fourier series.
 
 \subsection{Isolated Periodic Orbit}
-An isolated periodic orbit will have a single amplitude. Examples of Van der Pol oscillators are
+An isolated periodic orbit will have a single amplitude.
+Examples of Van der Pol oscillators are
 \begin{itemize}
 \item The human heart.
 \item An LC circuit with a tunnel diode.
@@ -51,10 +52,13 @@ An isolated periodic orbit will have a single amplitude. Examples of Van der Pol
 \end{itemize}
 
 \section{Chaos}
-Chaotic systems are ``random'' yet created by a deterministic system like $\dot{x}=f(x)$. It is interesting to look at the lowest order autonomous systems that can generate chaotic behavior which have been found to be of order $n=3$ in continuous time and order $n=1$ in discrete time. In this course we will be studying continuous time for the most part as it is more relevant to mechanical and aerospace systems than discrete time is.
+Chaotic systems are ``random'' yet created by a deterministic system like $\dot{x}=f(x)$.
+It is interesting to look at the lowest order autonomous systems that can generate chaotic behavior which have been found to be of order $n=3$ in continuous time and order $n=1$ in discrete time.
+In this course we will be studying continuous time for the most part as it is more relevant to mechanical and aerospace systems than discrete time is.
 
 \subsection{Lorenz Equations}
-The Lorenz equations given in (\ref{eq:02lorenz}) are an example of chaotic dynamics in continuous time. The equations are not periodic and cannot be represented by a Fourier series.
+The Lorenz equations given in (\ref{eq:02lorenz}) are an example of chaotic dynamics in continuous time.
+The equations are not periodic and cannot be represented by a Fourier series.
 \begin{align}
 \label{eq:02lorenz}
 \dot{x} &= \sigma(y - x) \nonumber \\
@@ -77,7 +81,8 @@ which yields the equilibria as
 \section{Qualitative Behavior Near Equilibria}
 This section corresponds to \S2.3 of Khalil. Let
 $$\dot{x} = f(x), \qquad f(p) = 0$$
-so that the point $p$ is an equilibrium. We can use a Taylor series expansion about $x=p$ to find
+so that the point $p$ is an equilibrium.
+We can use a Taylor series expansion about $x=p$ to find
 \begin{align*}
 \dot{x} = \underbrace{f(p)}_{=0} + \underbrace{\left.\frac{\partial f(x)}{\partial x}\right|_{x=p}}_{\text{constant square matrix}} \underbrace{(x-p)}_{y} + \text{H.O.T.}
 \end{align*}
@@ -93,14 +98,16 @@ For second order systems the state space is the plane spanned by $x_1 = x$ and $
 \subsection{Qualitative Behavior of Second-Order Linear Systems}
 For the system
 $$\dot{x} = Ax$$
-we have to look at the eigenvalues and eigenvectors of $A$. There are three possible Jordan forms of $A$ given as
+we have to look at the eigenvalues and eigenvectors of $A$.
+There are three possible Jordan forms of $A$ given as
 \begin{align*}
 \left[\begin{array}{c c} \lambda_1 & 0 \\ 0 & \lambda_2 \end{array}\right], \qquad
 \left[\begin{array}{c c} \alpha & -\beta \\ \beta & \alpha \end{array}\right], \qquad
 \left[\begin{array}{c c} \lambda & k \\ 0 & \lambda \end{array}\right]
 \end{align*}
 
-In the first case we have $\lambda_1\neq\lambda_2\neq0$. Figure~\ref{fig:02stable1} shows the stable mode for $\lambda_1, \lambda_2<0$, Figure~\ref{fig:02unstable1} shows the unstable mode for $\lambda_1, \lambda_2>0$ and Figure~\ref{fig:02saddle1} shows the saddle point for $\lambda_1>0$ and $\lambda_2<0$.
+In the first case we have $\lambda_1\neq\lambda_2\neq0$.
+Figure~\ref{fig:02stable1} shows the stable mode for $\lambda_1, \lambda_2<0$, Figure~\ref{fig:02unstable1} shows the unstable mode for $\lambda_1, \lambda_2>0$ and Figure~\ref{fig:02saddle1} shows the saddle point for $\lambda_1>0$ and $\lambda_2<0$.
 
 \begin{figure}[ht!]
 \centering
@@ -117,7 +124,8 @@ In the first case we have $\lambda_1\neq\lambda_2\neq0$. Figure~\ref{fig:02stabl
 \label{fig:02case1}
 \end{figure}
 
-In the second case we have $\lambda_{1,2}=\alpha\pm\ j\beta$. Figure~\ref{fig:02stable2} shows the stable mode for $\alpha<0$, Figure~\ref{fig:02unstable2} shows the unstable mode for $\alpha>0$ and Figure~\ref{fig:02center2} shows the oscillatory behavior that occurs when $\alpha=0$.
+In the second case we have $\lambda_{1,2}=\alpha\pm\ j\beta$.
+Figure~\ref{fig:02stable2} shows the stable mode for $\alpha<0$, Figure~\ref{fig:02unstable2} shows the unstable mode for $\alpha>0$ and Figure~\ref{fig:02center2} shows the oscillatory behavior that occurs when $\alpha=0$.
 
 \begin{figure}[ht!]
 \centering
@@ -134,7 +142,10 @@ In the second case we have $\lambda_{1,2}=\alpha\pm\ j\beta$. Figure~\ref{fig:02
 \label{fig:02case2}
 \end{figure}
 
-In the third case we have $\lambda_1=\lambda_2=\lambda\neq0$ and we can have $k=0$ or $k=1$. If $k=0$ then there are two independent eigenvectors and Figure~\ref{fig:02lltwo3} shows the stable mode for $\lambda<0$ and Figure~\ref{fig:02lgtwo3} shows the unstable mode for $\lambda>0$. When $k=1$ there is only a single independent eigenvector and troublesome behavior exists. Figure~\ref{fig:02llone3} shows what happens when $\lambda<0$ and Figure~\ref{fig:02lgone3} shows what happens when $\lambda>0$.
+In the third case we have $\lambda_1=\lambda_2=\lambda\neq0$ and we can have $k=0$ or $k=1$.
+If $k=0$ then there are two independent eigenvectors and Figure~\ref{fig:02lltwo3} shows the stable mode for $\lambda<0$ and Figure~\ref{fig:02lgtwo3} shows the unstable mode for $\lambda>0$.
+When $k=1$ there is only a single independent eigenvector and troublesome behavior exists.
+Figure~\ref{fig:02llone3} shows what happens when $\lambda<0$ and Figure~\ref{fig:02lgone3} shows what happens when $\lambda>0$.
 
 \begin{figure}[ht!]
 \centering
@@ -153,4 +164,3 @@ In the third case we have $\lambda_1=\lambda_2=\lambda\neq0$ and we can have $k=
 \caption{Case 3 with $\lambda_1=\lambda_2=\lambda\neq0$.}
 \label{fig:02case3}
 \end{figure}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
