--- a/mae281a_lec04.tex
+++ b/mae281a_lec04.tex
@@ -1,5 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \mainmatter%
 \setcounter{page}{1}
 
@@ -23,7 +21,8 @@ $$\dot{x} = f(t,x)$$
 \begin{example}
 Consider
 $$\dot{x} = -x + x^3$$
-Then we have that $|x(t)|\to\infty$ as $t\to\tfrac{1}{2}\text{ln}\frac{x_0^2}{x_0^2-1}$ if $|x_0|>1$ as seen in Figure~\ref{fig:04nonexist}. Recall from \S\ref{sec:01fet} that growth greater than linear can cause the non-existence of solutions.
+Then we have that $|x(t)|\to\infty$ as $t\to\tfrac{1}{2}\text{ln}\frac{x_0^2}{x_0^2-1}$ if $|x_0|>1$ as seen in Figure~\ref{fig:04nonexist}.
+Recall from \S\ref{sec:01fet} that growth greater than linear can cause the non-existence of solutions.
 $\lozenge$
 \end{example}
 
@@ -44,14 +43,18 @@ This leads to
 $$\frac{dx}{\sqrt[3]{x}} = dt \Rightarrow \tfrac{3}{2}\left(x{(t)}^{2/3}-x_0^{2/3}\right) = t$$
 If $x_0\neq0$ then
 $$x(t) = \text{sgn}(x_0)\left(x_0^{2/3}+\tfrac{2}{3}t\right)^{3/2}$$% chktex 3
-This grows to the power of $\frac{3}{2}$ which is not quite quadratic. If $x_0=0$ then we get multiple valid solutions including
+This grows to the power of $\frac{3}{2}$ which is not quite quadratic.
+If $x_0=0$ then we get multiple valid solutions including
 \begin{align*}
 x(t) &= 0 \\
 x(t) &= \pm{(\tfrac{2}{3}t)}^{3/2}
 \end{align*}
-There are even more valid solutions. For these cases we have
+There are even more valid solutions.
+For these cases we have
 $$x(t) = \begin{cases} 0, & t\in[0,T]~\forall T\in[0,\infty] \\ \pm{(\tfrac{2}{3}(t-T))}^{3/2}, & t\geq T \end{cases}$$
-The resulting trajectories can be seen in Figure~\ref{fig:04multsols}. The slope is infinite at the origin so $\sqrt[3]{x}$ is not differentiable at the origin as seen in Figure~\ref{fig:04infslope}. This leads to non-uniqueness of the solution.
+The resulting trajectories can be seen in Figure~\ref{fig:04multsols}.
+The slope is infinite at the origin so $\sqrt[3]{x}$ is not differentiable at the origin as seen in Figure~\ref{fig:04infslope}.
+This leads to non-uniqueness of the solution.
 $\lozenge$
 \end{example}
 
@@ -76,7 +79,8 @@ Continuity deals with the $\mathcal{C}^0$ space.
 A function $f(x)$ is \textit{continuous} at a point $x$ if $\forall \epsilon \exists \delta$ s.t.
 $$|x-y|<\delta \Rightarrow |f(x)-f(y)|<\epsilon$$
 \end{definition}
-Note that Khalil uses the notation $||\cdot||$ while this course uses $|\cdot|$ to denote a Euclidean norm. Many mathematicians save the notation $||\cdot||$ for non-Euclidean spaces such as Banach, $L_2$, $L_\infty$, etc.
+Note that Khalil uses the notation $||\cdot||$ while this course uses $|\cdot|$ to denote a Euclidean norm.
+Many mathematicians save the notation $||\cdot||$ for non-Euclidean spaces such as Banach, $L_2$, $L_\infty$, etc.
 
 \begin{definition}
 A function $f$ is \textit{uniformly continuous} if $\delta$ only depends on $\epsilon$, not on $x$.
@@ -103,12 +107,15 @@ $$L (x,y) = \{\mathcal{Z}~|~\mathcal{Z} = \theta{} x + (1-\theta) y, 0<\theta<1\
 Then there exists $z\in{} L (x,y)$ such that
 $$f (y)-f (x) = \left.\frac{\partial{} f}{\partial{} x}\right|_{x=z} (y-x)$$
 \end{theorem}
-This is similar to a Taylor series expansion. However, it is an exact form but the derivative is evaluated not at $x=x$ but at $x=z$. The theorem does not say what $z$ is other than $z\in[x,y]$.
+This is similar to a Taylor series expansion.
+However, it is an exact form but the derivative is evaluated not at $x=x$ but at $x=z$.
+The theorem does not say what $z$ is other than $z\in[x,y]$.
 
 \begin{example}
 Let $f (x) = x^2$, then
 $$f (y)-f (x) = y^2-x^2 = (y+x) (y-x)$$
-In this case $z=\frac{x+y}{2}$. Note that this comes from
+In this case $z=\frac{x+y}{2}$.
+Note that this comes from
 \begin{align*}
 \left.\frac{\partial f}{\partial x}\right|_{x=z} = y+x \\
 f^\prime(x) = 2z \Rightarrow z = \frac{x+y}{2}
@@ -118,7 +125,9 @@ $\lozenge$
 
 \section{Gr\"onwall (-Bellman) Inequality}
 \label{sec:04gronwall}
-The proof of this lemma is located in the appendix of Khalil. There are three versions of this lemma. We can think of the function $y$ as the energy of the system.
+The proof of this lemma is located in the appendix of Khalil.
+There are three versions of this lemma.
+We can think of the function $y$ as the energy of the system.
 
 \subsection{Version 1-General}
 \begin{lemma}
@@ -130,9 +139,11 @@ $$y(t) \leq \lambda(t) + \int_a^t \lambda(s)\mu(s) e^{\int_s^t\mu(\tau)d\tau}ds$
 Typically $\lambda$ and $\mu$ describe properties of a system such as initial conditions, stiffness, damping, etc.
 
 \begin{proof}
-Define $z(t) = \int_z^t \mu(s)y(s)ds$. Then
+Define $z(t) = \int_z^t \mu(s)y(s)ds$.
+Then
 $$\dot{z} = \mu z + \mu(y-z)$$
-Now apply the variational constants formula. Note that $y-z\leq\lambda$ which leads to
+Now apply the variational constants formula.
+Note that $y-z\leq\lambda$ which leads to
 $$z(t) \leq \int_a^t e^{\int_s^t \mu(\tau)d\tau}\mu(s)\lambda(s)ds$$
 Substitute this in to complete the proof.
 \end{proof}
@@ -152,4 +163,3 @@ Substitute the constants in and apply integration by parts and perform cancellat
 If $\mu(t) = \mu$ is a constant and $\lambda(t) = \lambda$ is a constant then
 $$y(t) \leq \lambda e^{\mu(t-a)}$$
 \end{lemma}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
