Fixed chktex warning about exponential expression syntax.

--- a/mae281a_lec04.tex
+++ b/mae281a_lec04.tex
@@ -42,7 +42,7 @@ $$\dot{x} = \sqrt[3]{x}$$
 This leads to
 $$\frac{dx}{\sqrt[3]{x}} = dt \Rightarrow \tfrac{3}{2}\left(x{(t)}^{2/3}-x_0^{2/3}\right) = t$$
 If $x_0\neq0$ then
-$$x(t) = \text{sgn}(x_0)\left(x_0^{2/3}+\tfrac{2}{3}t\right)^{3/2}$$% chktex 3
+$$x(t) = \text{sgn}(x_0){\left(x_0^{2/3}+\tfrac{2}{3}t\right)}^{3/2}$$
 This grows to the power of $\frac{3}{2}$ which is not quite quadratic.
 If $x_0=0$ then we get multiple valid solutions including
 \begin{align*}
